# leanpub

./: .gitignore  .travis.yml  cabal.project  flake.nix  hie.yaml  readme.md  stack.yaml
.github/workflows/: haskell.hs  haskell.yml  test.yml
configurations/: ghc-8.10.project  ghc-8.8.project  ghc-9.0.project  ghc-9.2.project
examples/: createCoupons.hs
leanpub-concepts/: changelog.md  leanpub-concepts.cabal  readme.md
leanpub-wreq/: changelog.md  leanpub-wreq.cabal  readme.md
