name: leanpub-concepts
version: 1.0.0.0

synopsis: Types for the Leanpub API
category: Web

description:
    This is a minimal package that just defines a common set of types
    for working with the <https://leanpub.com/help/api Leanpub API>.

homepage:    https://github.com/typeclasses/leanpub
bug-reports: https://github.com/typeclasses/leanpub/issues

author:     Chris Martin
maintainer: Chris Martin, Julie Moronuki

copyright: 2018 Typeclass Consulting, LLC
license: MIT
license-file: license.txt

build-type: Simple
cabal-version: >=1.10
tested-with: GHC==8.2.2, GHC==8.4.3, GHC==8.6.3

extra-source-files:
    changelog.md

library
    hs-source-dirs: library
    default-language: Haskell2010

    exposed-modules:
        Leanpub.Concepts

    build-depends:
        base >=4.10 && <5
      , bytestring
      , text
