cabal-version: 3.0

name: leanpub-concepts
version: 1.1.0.2

synopsis: Types for the Leanpub API
category: Web

description:
    This is a minimal package that just defines a common set of types
    for working with the Leanpub API.

homepage:    https://github.com/typeclasses/leanpub
bug-reports: https://github.com/typeclasses/leanpub/issues

author:     Chris Martin
maintainer: Chris Martin, Julie Moronuki

copyright: 2021 Mission Valley Software LLC
license: MIT
license-file: license.txt

extra-source-files: *.md

library
    hs-source-dirs: library
    default-language: Haskell2010

    exposed-modules:
        Leanpub.Concepts

    build-depends:
      , base ^>= 4.15 || ^>= 4.16 || ^>= 4.17 || ^>= 4.18
      , bytestring ^>= 0.10 || ^>= 0.11
      , text ^>= 1.2.4 || ^>= 2.0
